<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="20dp"
    android:orientation="vertical" >
    
   <ImageView android:src="@drawable/ic_launcher"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
       android:textColor="#000"
       android:paddingTop="20dp"
       android:paddingBottom="60dp"
       />
    
        <EditText 
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:inputType="textCapWords"
            android:hint="@string/username"
            android:textSize="15sp"
            />

        <EditText 
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="15sp"
            />
		<EditText android:id="@+id/server_ip"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="20dp"
		    android:textSize="15sp"
		    android:text="http://115.47.55.138:8080/caic-ws"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:onClick="onClick"
            android:textSize="20sp"
            android:textColor="#fff"
            android:background="@drawable/bg_circle_blue"
            android:text="@string/login_btn"/>

</LinearLayout>
